# Snaze-Game

./: CMakeLists.txt  LICENSE  author.md
src/: exec  game.cpp  game.h  main.cpp
